fixing tour boxes as the size wasn't aligned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,7 @@ p {
 }
 
 .tour-item {
-    width: 1000px;
+    width: 2000px;
     height: 250px;
     border: 1px solid black;
     margin: 10px;
@@ -132,7 +132,7 @@ p {
     text-align: center;
     padding: 20px;
     margin-bottom: 50px;
-    margin-top: 2px; 
+    margin-top: 20px; 
 }
 
 .tour-item-title {
